welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:9: error: not found: value y
			setPos(y,0)
                               ^